k8s/K8s_codes_practice/practice_code04.yml
# =========================
# NAMESPACE
# =========================
apiVersion: v1
kind: Namespace
metadata:
  name: dev

---
# =========================
# DEPLOYMENT
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: dev
spec:
  replicas: 3

  selector:
    matchLabels:
      app: flask

  template:
    metadata:
      labels:
        app: flask

    spec:

      containers:
      - name: flask
        image: flask-app:v1

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

        startupProbe:
          httpGet:
            path: /
            port: 5000

        readinessProbe:
          httpGet:
            path: /
            port: 5000

        livenessProbe:
          httpGet:
            path: /
            port: 5000

        volumeMounts:
        - name: storage
          mountPath: /app/data

      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: flask-pvc

---
# =========================
# SERVICE
# =========================
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: dev
spec:
  selector:
    app: flask
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP

---
# =========================
# INGRESS
# =========================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: flask.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
