k8s/K8s_codes_practice/practice_code3nginx.yml
apiVersion: v1
kind: Namespace

metadata:
  name: dev
  labels:
    app: nginx-app

---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment
  namespace: dev
  labels:
    app: nginx-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-app

  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80 
      
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /usr/share/nginx/html/index.html    
          subPath: index.html 
        - name: nginx-storage 
          mountPath: /usr/share/nginx/html/uploads 

      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-configmap

      - name: nginx-storage
        persistentVolumeClaim:
          claimName: nginx-pvc

---
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: dev
  labels:
    app: nginx-app

spec:
  type: ClusterIP
  selector:
    app: nginx-app

  ports:
  - port: 80
    targetPort: 80      

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress
  namespace: dev
  labels:
    app: nginx-app

spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
