k8s/K8s_codes_practice/ss.yml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-pod
  namespace: dev
  labels:
    app: nginx-app

spec:
  containers:
  - name: nginx-container
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment
  namespace: dev
  labels:
    app: nginx-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80

        startupProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80   
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe: 
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5

        resources:
          requests:
            cpu: "100m" 
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: nginx-storage
          mountPath: /usr/share/nginx/uploads
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-configmap
      - name: nginx-storage
        persistentVolumeClaim:
          claimName: nginx-pvc            

---
apiVersion: v1
kind: Namespace

metadata: 
  name: dev
  labels:
    app: nginx-app
---
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: dev
  labels:
    app: nginx-app

spec:
  type: ClusterIP
  selector:
    app: nginx-app

  ports:
  - port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress
  namespace: dev
  labels:
    app: nginx-app
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

---
spec:
  capacity:
    storage: 1Gi
  accessModes:
  - ReadWriteOnce
  persistentVolumeReclaimPolicy: Retain
  storageClassName: manual
  hostPath:
    path: /mnt/data/nginx
